reworked camera motion based on vertex colors in Fly.java